--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -9,8 +9,10 @@ jobs: #Definición de los jobs
         uses: haythem/public-ip@v1.3 #Usará el action haythem/public-ip
       - name: Hola mundo #Nombre del segundo step
         run: echo Hola Mundo desde ${{ steps.ip.outputs.ipv4 }}! #comando de bash
-      - uses: actions/checkout@v3
-      - name: configurar Go #Nombre del tercer step
+        uses: actions/checkout@v3
+      - name: Definir variable #Nombre del tercer step
+        run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
+      - name: configurar Go #Nombre del cuarto step
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
