Ooh, la-di-da, Mr. French man

--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -4,21 +4,21 @@ jobs: #Definición de los jobs
   imprimir-hola-mundo: #Nombre del job
     runs-on: ubuntu-latest #Maquina virtual (runner) en el que se va a ejecutar el workflow
     steps: #Lista de steps del job hola-mundo
-      - name: Public IP #Nombre del primer step
+      - name: Obtener IP para mostrar en el siguiente Step #Nombre del primer step
         id: ip #identificador usable dentro del job para otros steps
         uses: haythem/public-ip@v1.3 #Usará el action haythem/public-ip
-      - name: Hola mundo #Nombre del segundo step
+      - name: Saludo desde el Runner #Nombre del segundo step
         run: echo Hola Mundo desde ${{ steps.ip.outputs.ipv4 }}! #comando de bash
-      - name: Clonando repo en el runner #Nombre del tercer step
+      - name: Clonando repo en el Runner #Nombre del tercer step
         uses: actions/checkout@v3
-      - name: Definir variable #Nombre del cuarto step
+      - name: Definir variable global #Nombre del cuarto step
         run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
-      - name: configurar Go #Nombre del quinto step
+      - name: Configurar entorno de Go #Nombre del quinto step
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
       
-      - name: Construir y ejecutra el programa en Go #Nombre del sexto step
+      - name: Saludo desde el programa desarrollado en Go #Nombre del sexto step
         run: |
           go build -o hola-mundo main.go
           ./hola-mundo
